name:                language-grift
version:             0.1.0.0
synopsis:            Parser and pretty printer for Grift languages
-- description:         
homepage:            https://github.com/Gradual-Typing/language-grift
license:             BSD3
license-file:        LICENSE
author:              Deyaaeldeen Almahallawi
maintainer:          diaa6510@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.Grift.Blame.Syntax
                       Language.Grift.Source.Check
                     , Language.Grift.Source.Parser
                     , Language.Grift.Source.Pretty
                     , Language.Grift.Source.Parser.WithSourcePos
                     , Language.Grift.Source.Syntax
                     , Language.Grift.TypeContext
                     , Language.Grift.Utils
  -- other-modules:       
  build-depends:       base
                     , bifunctors
                     , lattices
                     , mtl
                     , parsec
                     , pretty
                     , recursion-schemes
                     , singletons
                     , tagged
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:
    -Wall -O2
